--- a/src/login/styles/login.css
+++ b/src/login/styles/login.css
@@ -1,1 +1,83 @@
-/* CSS를 활용하여 레이아웃 및 스타일링을 완성해주세요 */
+body {
+  margin: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.input input:focus {
+  background-color: #f2f2f2;
+  border-color:#03cf5d;
+}
+
+input {
+  width: 475px;
+  height: 45px;
+  padding: 0 10px;
+  font-size: 1rem;
+}
+
+
+.login {
+  border: none;
+  background-color: #03cf5d;
+  font-size: 1rem;
+  width: 500px;
+  height: 45px;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  focus
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+  font-size: 0.9rem;
+}
+
+.status {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.security {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.switch {
+  display: inline-block;
+  color: gray;
+  cursor: pointer;
+  user-select: none;
+  text-transform: uppercase;
+ 
+}
+#switch:checked + .switch {
+  color: green;
+  content: "on";
+}
+
+.switch::after {
+  content: "off";
+}
+#switch:checked + .switch::after {
+  content: "on";
+}
